# vez-rs

./: .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
V-EZ/Source/Core/: StreamEncoder.cpp
examples/: feature_tour.rs  mesh.rs  triangle.rs
src/: .lib.rs.swp  lib.rs  vez.rs
